--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
         <link rel='stylesheet' type='text/css' href='./lib/styles/app.min.css'>
     </head>
     <body>
-      
 
           <ui-view></ui-view>
-
 
         <script src="./node_modules/angular/angular.min.js"></script>
         <script src="./node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="./node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <script src="./src/js/app.js"></script>
+        <script src="./src/js/services/create.service.js"></script>
         <script src="./src/js/controllers/create.controller.js"></script>
         <script src="./src/js/controllers/login.controller.js"></script>
         <script src="./src/js/controllers/view.controller.js"></script>
+
+
     </body>
 </html>
