added map controller

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-    
+
           <ui-view></ui-view>
 
         <script src="./node_modules/angular/angular.min.js"></script>
@@ -19,7 +19,7 @@
         <script src="./src/js/services/create.service.js"></script>
         <script src="./src/js/controllers/create.controller.js"></script>
         <script src="./src/js/controllers/login.controller.js"></script>
-        <script src="./src/js/controllers/view.controller.js"></script>
+        <script src="./src/js/controllers/map.controller.js"></script>
 
 
     </body>
