--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang='en' ng-app="planscape">
-    <head>
-        <meta charset='utf-8'>
-        <title>Planscape</title>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-        <link rel='stylesheet' type='text/css' href='./lib/styles/app.min.css'>
-    </head>
 
-    <body>
+<head>
+    <meta charset='utf-8'>
+    <title>Planscape</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
+    <link rel='stylesheet' type='text/css' href='./lib/styles/app.min.css'>
+</head>
 
-          <ui-view></ui-view>
+<body>
+    <ui-view></ui-view>
 
-        <script src="./node_modules/angular/angular.min.js"></script>
-        <script src="./node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-        <script src="./node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
-        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="./src/js/app.js"></script>
-        <script src="./src/js/services/create.service.js"></script>
-        <script src="./src/js/controllers/create.controller.js"></script>
-        <script src="./src/js/controllers/login.controller.js"></script>
-        <script src="./src/js/controllers/map.controller.js"></script>
+    <script data-require="google-maps@1.0.0" data-semver="1.0.0" src="http://maps.google.com/maps/api/js?key=AIzaSyC47QdUqLb_xaPTPKQgSL592FfkJ841OfQ"></script>
+    <script data-require="lodash-underscore@*" data-semver="2.4.1" src="https://rawgit.com/lodash/lodash/2.4.1/dist/lodash.underscore.min.js"></script>
 
+    <script src="./node_modules/angular/angular.min.js"></script>
+    <script src="./node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="./node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script data-require="angular-google-maps@*" data-semver="1.1.4" src="https://rawgit.com/nlaplante/angular-google-maps/1.1.4/dist/angular-google-maps.min.js"></script>
+    <script src="./src/js/app.js"></script>
+    <script src="./src/js/controllers/create.controller.js"></script>
+    <script src="./src/js/controllers/login.controller.js"></script>
+    <script src="./src/js/controllers/map.controller.js"></script>
+</body>
 
-    </body>
 </html>
