--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script data-require="lodash-underscore@*" data-semver="2.4.1" src="https://rawgit.com/lodash/lodash/2.4.1/dist/lodash.underscore.min.js"></script>
         <script data-require="angular-google-maps@*" data-semver="1.1.4" src="https://rawgit.com/nlaplante/angular-google-maps/1.1.4/dist/angular-google-maps.min.js"></script>
         <script src="./src/js/app.js"></script>
-        <script src="./src/js/services/create.service.js"></script>
+        <script src="./src/js/services/route.service.js"></script>
         <script src="./src/js/controllers/create.controller.js"></script>
         <script src="./src/js/controllers/login.controller.js"></script>
         <script src="./src/js/controllers/map.controller.js"></script>
