All Locations table updates with API call to database

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script data-require="angular-google-maps@*" data-semver="1.1.4" src="https://rawgit.com/nlaplante/angular-google-maps/1.1.4/dist/angular-google-maps.min.js"></script>
         <script src="./src/js/app.js"></script>
         <script src="./src/js/services/route.service.js"></script>
+        <script src="./src/js/controllers/routes.controller.js"></script>
         <script src="./src/js/controllers/create.controller.js"></script>
         <script src="./src/js/controllers/login.controller.js"></script>
         <script src="./src/js/controllers/map.controller.js"></script>
