--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="./src/js/vendor/angular-ui-router.min.js"></script>
         <script src="./src/js/vendor/angular-local-storage.min.js"></script>
         <script src="./src/js/vendor/jquery-3.1.1.min.js"></script>
-        <script data-require="google-maps@1.0.0" data-semver="1.0.0" src="http://maps.google.com/maps/api/js?key=AIzaSyC47QdUqLb_xaPTPKQgSL592FfkJ841OfQ"></script>
+        <script data-require="google-maps@1.0.0" data-semver="1.0.0" src="https://maps.google.com/maps/api/js?key=AIzaSyC47QdUqLb_xaPTPKQgSL592FfkJ841OfQ"></script>
         <script data-require="lodash-underscore@*" data-semver="2.4.1" src="https://rawgit.com/lodash/lodash/2.4.1/dist/lodash.underscore.min.js"></script>
         <script data-require="angular-google-maps@*" data-semver="1.1.4" src="https://rawgit.com/nlaplante/angular-google-maps/1.1.4/dist/angular-google-maps.min.js"></script>
         <script src="./src/js/app.js"></script>
