ui view takes route parameters when user clicks into detail view to get correct details

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8'>
     <title>Planscape</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel='stylesheet' type='text/css' href='./lib/styles/app.min.css'>
 </head>
 
@@ -23,6 +25,7 @@
         <script src="./src/js/services/route.service.js"></script>
         <script src="./src/js/controllers/routes.controller.js"></script>
         <script src="./src/js/controllers/create.controller.js"></script>
+        <script src="./src/js/controllers/detail.controller.js"></script>
         <script src="./src/js/controllers/login.controller.js"></script>
         <script src="./src/js/controllers/map.controller.js"></script>
 
