offloaded static header to index page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <header>
+      <div class="title-logo"><h1>Planscape</h1></div>
+      <h3 ui-sref="main.create">Create Route</h3>
+      <h3 ui-sref="main.routes">View My Routes</h3>
+      <h3 ui-sref="main.map">View Map</h3>
+    </header>
     <ui-view></ui-view>
 
 
