--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <body>
     <header>
-      <div class="title-logo"><h1>Planscape</h1></div>
+      <div class="title-logo"><img src="./lib/images/PlanScapeLogo.svg"></div>
       <h3 ui-sref="main.create">Create Route</h3>
       <h3 ui-sref="main.routes">View My Routes</h3>
       <h3 ui-sref="main.map">View Map</h3>
     </header>
+
     <ui-view></ui-view>
 
 
